Retroactively noted release date for 2.3.2 [ci skip]

--- a/ChangeLog
+++ b/ChangeLog
@@ -10,6 +10,7 @@
 
 2016-07-08    <tromo@hill>
 
+	* Released loos-2.3.2
 	* Added support for unpacking prebuilt docs tarball
 
 2016-07-01    <tromo@hill>
