--- a/ChangeLog
+++ b/ChangeLog
@@ -7,7 +7,7 @@
 
 2016-07-21    <alan@membrane>
 	
-	* Added new tool lipid_survial to compute lifetime of lipids at surface 
+	* Added new tool lipid_survival to compute lifetime of lipids at surface 
 	  of protein
 
 2016-07-11    <alan@membrane>
