Updated to reflect changes in rdf and atomic-rdf

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2016-08-17    <tromo@hill>
+
+	* Added support for using ranges of frames and skip in rdf and atomic-rdf
+
 2016-08-03    <tromo@hill>
 
 	* Fixed bug in effsize.pl affecting some Unix distros
