Fixed bug in water-autocorrel
This bug affected occurs when some waters were not classified as inside (i.e. most cases).
This resulted in an out-of-range index error.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,7 @@
 2016-08-17    <tromo@hill>
 
 	* Added support for using ranges of frames and skip in rdf, atomic-rdf, and xy_rdf
+	* Fixed bug in water-autocorrel
 
 2016-08-03    <tromo@hill>
 
