Changed dibmops to output 0.0 for avg in bins with no data
Previously, dibmops would use -1 for avg as a marker to indicate no data (in addition
to the number of lipids in the 2nd column of the output).

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,7 @@
 2016-08-26    <tromo@hill>
 
 	* Added option to remove bonds with model-select
+	* Changed dibmops to use 0 for avg in bins with no data rather than -1
 
 2016-08-17    <tromo@hill>
 
