Fixed bug in water density tools affecting the radius water filter
Mistakenly short-circuited search for matching waters resulting in abnormally few
waters being picked.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2016-09-08    <tromo@hill>
+
+	* Fixed bug affecting water density tools and the radius filter.  Too few waters
+	were actually being selected.
+
 2016-09-02    <tromo@hill>
 
 	* Changed DCD to handle trajectories with 0 frame count in the header (no longer
