--- a/loos.dox
+++ b/loos.dox
@@ -150,11 +150,13 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 
 /*! \page citing Citing LOOS in published work
 If you use LOOS in your work, please reference the following
-publication:
+publications:
 
 Romo, T.D., Grossfield, A. "LOOS: An extensible platform for the
 structural analysis of simulations."  31st Annual International
 Conference of the IEEE EMBS (2009): 2332-2335
+
+Romo, T. D., Leioatts, N. and Grossfield, A., "Lightweight Object Oriented Structure Analysis: Tools for building tools to analyze molecular dynamics simulations", J. Comput. Chem. (2014): 2305-2318
 
 */
 
