--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2017-04-02    <tromo@hill>
+
+	* Fixed bug in backbone selection causing terminal nucleic acids to be skipped
+
 2017-03-21	<tromo>
 	* Added support for gro files that are missing velocities.
 
