--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,9 @@
-2017-04-02    <tromo@hill>
+2017-04-28	<tromo>
+	* Fixed bug in PDB reader affecting parsing of CONECT records and hybrid36 atomids
+	* Changed extreme reimaging mode in subsetter to use middle-residue for repositioning
+	  rather than the first atom.
+		
+2017-04-02    <tromo>
 
 	* Fixed bug in backbone selection causing terminal nucleic acids to be skipped
 
