--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2017-08-02 <alan>
+	* Added the ability to manually select the water to crossing-waters tool.
+	  Based on a bug report from Violeta Casamayor.
+	  
 2017-07-18 <tromo>
 	* Added support for indexing relative to the end of the trajectory in
 	  frame2pdb (using negative frame numbers)
