--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2017-08-09 <alan>
+	* Added NAMDBin.py, to read NAMD binary format.
+
 2017-08-02 <alan>
 	* Added the ability to manually select the water to crossing-waters tool.
 	  Based on a bug report from Violeta Casamayor.
